# project_trofimov_b24_505

./: .gitignore  Makefile  README.md  pyproject.toml
project_func/scripts/: main_base.py
