[tool.poetry]
name = "project-trofimov-b24-505"
version = "0.1.0"
description = ""
authors = ["zvezdochey <semen.yar13@mail.ru>"]
readme = "README.md"
packages = [
    { include = "project_func" },
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
project = "project_func.scripts.main_base:main"
